--- a/resources/views/app.edge
+++ b/resources/views/app.edge
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +7,6 @@
 
   @entryPointStyles('app')
   @entryPointScripts ('app')
-
-  <title>jack-jill</title>
 
 </head>
 <body>
